package fr.univartois.sae.hopital.model;

public interface Recherchable {
    void rechercheParNom();

    void rechercheParSpecialisation();

    void rechercheGenerale();
}
